# dataversepp

./: .gitignore  CMakeLists.txt  LICENCE  README.md  azure-pipelines.yml  dataversepp.sln  vcpkg.json
dataverse/: CMakeLists.txt
dataverse/include/dataverse/: api.h  blob.h  blob.inl  convert.h  convert.inl  dataverse_connection.h  dataverse_connection.inl  event.h  form_data.h  hash.h  http_headers.h  http_response.h  json.h  narrow_string.h  socket.h  types.h  winsock_scope.h
dataverse/src/: blob.cpp  char_collapse.h  com_error_category.cpp  com_error_category.h  convert.cpp  curl_error_category.cpp  curl_error_category.h  curl_worker_state.h  curlm_error_category.cpp  curlm_error_category.h  dataverse_connection.cpp  dataverse_connection_impl.cpp  dataverse_connection_impl.h  direct_upload_context.cpp  direct_upload_context.h  errors.h  event.cpp  file_properties.cpp  file_properties.h  form_data.cpp  hash.cpp  http_headers.cpp  http_headers.h  http_request.cpp  http_request.h  http_request_headers.h  http_response.cpp  http_response.h  http_response_headers.h  icu_error_category.cpp  icu_error_category.h  invoke_handler.cpp  invoke_handler.h  io_completion_port.cpp  io_completion_port.h  io_context.cpp  io_context.h  io_operation.h  less_ci.h  ntstatus_error_category.cpp  (+20 more)
dataversecli/: CMakeLists.txt  convert.h  dataversecli.cpp  directory.cpp  directory.h  upload.cpp  upload.h
dataversepp/: dataversepp.vcxproj
test/: CMakeLists.txt  api.cpp  blob.cpp  convert.cpp  json.cpp
